package ar.edu.utn.frba.dds;

public enum Origen {
  CARGA_MANUAL,
  DATASET,
  CONTRIBUYENTE
}
